--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IQC Maker — Premium</title>
+  <title>Fake WhatsApp Chat Generator</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #0d1b2a;
+      font-family: "Segoe UI", Arial, sans-serif;
+      background: #111;
       color: white;
       text-align: center;
       padding: 20px;
@@ -15,51 +15,94 @@
     .input-box {
       margin: 20px 0;
     }
-    .chat-preview {
-      background: #000;
-      border-radius: 10px;
-      width: 300px;
-      margin: 20px auto;
-      padding: 15px;
-      text-align: left;
-    }
-    .chat-bubble {
-      background: #2b2b2b;
+    input {
       padding: 10px;
+      width: 70%;
       border-radius: 8px;
-      margin: 5px 0;
+      border: none;
     }
     button {
       padding: 10px 20px;
+      margin-left: 5px;
       border: none;
       border-radius: 8px;
-      background: #3b82f6;
+      background: #25D366;
       color: white;
       cursor: pointer;
     }
     button:hover {
-      background: #2563eb;
+      background: #128C7E;
+    }
+    /* Chat preview */
+    .chat-preview {
+      background: url('https://i.ibb.co/mhF0P9t/wa-bg.png');
+      background-size: cover;
+      border-radius: 10px;
+      width: 320px;
+      min-height: 400px;
+      margin: 20px auto;
+      padding: 15px;
+      text-align: left;
+      position: relative;
+    }
+    .bubble {
+      display: inline-block;
+      padding: 10px 15px;
+      border-radius: 8px;
+      margin: 8px 0;
+      max-width: 80%;
+      position: relative;
+    }
+    .me {
+      background: #DCF8C6;
+      color: black;
+      align-self: flex-end;
+      margin-left: auto;
+    }
+    .other {
+      background: #2b2b2b;
+      color: white;
+    }
+    .time {
+      font-size: 10px;
+      color: gray;
+      margin-left: 10px;
+    }
+    .reactions {
+      position: absolute;
+      top: -18px;
+      left: 10px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
   <h2>IQC Maker — Premium</h2>
   <div class="input-box">
-    <input id="userInput" type="text" placeholder="Masukkan teks..." style="padding:10px;width:80%;">
+    <input id="userInput" type="text" placeholder="Tulis pesan di sini...">
     <button onclick="generateChat()">Create</button>
   </div>
 
   <div id="result" class="chat-preview" style="display:none;">
-    <div class="chat-bubble" id="chatText"></div>
+    <div class="bubble other">
+      Halo! Ini contoh chat lawan bicara. 
+      <span class="time">07:21</span>
+    </div>
+    <div class="bubble me" id="chatBubble">
+      ...
+      <span class="time">07:22 ✔✔</span>
+      <div class="reactions" id="reactions">👍 ❤️ 😂 😮 😢 🙏</div>
+    </div>
   </div>
 
   <button onclick="downloadImage()" style="display:none;" id="downloadBtn">Download</button>
 
+  <!-- html2canvas untuk screenshot -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script>
     function generateChat() {
       let text = document.getElementById("userInput").value;
-      document.getElementById("chatText").innerText = text;
+      document.getElementById("chatBubble").childNodes[0].nodeValue = text + " ";
       document.getElementById("result").style.display = "block";
       document.getElementById("downloadBtn").style.display = "inline-block";
     }
@@ -67,7 +110,7 @@
     function downloadImage() {
       html2canvas(document.querySelector("#result")).then(canvas => {
         let link = document.createElement("a");
-        link.download = "chat.png";
+        link.download = "whatsapp_chat.png";
         link.href = canvas.toDataURL();
         link.click();
       });
