--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fake WhatsApp Chat Generator</title>
+  <title>IQC Maker — Premium</title>
   <style>
     body {
       font-family: "Segoe UI", Arial, sans-serif;
-      background: #111;
+      background: #0b141a;
       color: white;
       text-align: center;
       padding: 20px;
@@ -26,80 +26,101 @@
       margin-left: 5px;
       border: none;
       border-radius: 8px;
-      background: #25D366;
+      background: #3b82f6;
       color: white;
       cursor: pointer;
     }
-    button:hover {
-      background: #128C7E;
-    }
-    /* Chat preview */
     .chat-preview {
-      background: url('https://i.ibb.co/mhF0P9t/wa-bg.png');
-      background-size: cover;
+      background: #000 url('https://i.ibb.co/mhF0P9t/wa-bg.png') repeat;
       border-radius: 10px;
       width: 320px;
-      min-height: 400px;
       margin: 20px auto;
       padding: 15px;
       text-align: left;
       position: relative;
     }
     .bubble {
-      display: inline-block;
-      padding: 10px 15px;
-      border-radius: 8px;
-      margin: 8px 0;
-      max-width: 80%;
-      position: relative;
-    }
-    .me {
-      background: #DCF8C6;
-      color: black;
-      align-self: flex-end;
-      margin-left: auto;
-    }
-    .other {
       background: #2b2b2b;
       color: white;
+      padding: 10px 15px;
+      border-radius: 8px;
+      margin: 20px 0 5px;
+      position: relative;
+      max-width: 85%;
     }
     .time {
       font-size: 10px;
-      color: gray;
-      margin-left: 10px;
+      color: #ccc;
+      float: right;
+      margin-left: 8px;
     }
     .reactions {
-      position: absolute;
-      top: -18px;
-      left: 10px;
+      margin-top: -15px;
+      margin-bottom: 5px;
+      font-size: 16px;
+    }
+    .menu {
+      background: rgba(20,20,20,0.9);
+      border-radius: 10px;
+      padding: 10px;
       font-size: 14px;
+    }
+    .menu div {
+      padding: 6px 0;
+      border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+    .menu div:last-child {
+      border: none;
+      color: red;
     }
   </style>
 </head>
 <body>
   <h2>IQC Maker — Premium</h2>
+  <p>Masukkan teks lalu klik Create untuk membuat hasil.</p>
   <div class="input-box">
-    <input id="userInput" type="text" placeholder="Tulis pesan di sini...">
+    <input id="userInput" type="text" placeholder="Masukkan teks...">
     <button onclick="generateChat()">Create</button>
   </div>
 
   <div id="result" class="chat-preview" style="display:none;">
-    <div class="bubble other">
-      Halo! Ini contoh chat lawan bicara. 
-      <span class="time">07:21</span>
+    <div class="reactions">👍 ❤️ 😂 😮 😢 🙏</div>
+    <div class="bubble" id="chatBubble">
+      HIDUP HARUS TERUS SEPERTI <span class="time">07:22</span>
     </div>
-    <div class="bubble me" id="chatBubble">
-      ...
-      <span class="time">07:22 ✔✔</span>
-      <div class="reactions" id="reactions">👍 ❤️ 😂 😮 😢 🙏</div>
+    <div class="menu">
+      <div>⭐ Beri Bintang</div>
+      <div>↩ Balas</div>
+      <div>⤴ Teruskan</div>
+      <div>📋 Salin</div>
+      <div>💬 Ucapkan</div>
+      <div>⚠ Laporkan</div>
+      <div>🗑 Hapus</div>
     </div>
   </div>
 
   <button onclick="downloadImage()" style="display:none;" id="downloadBtn">Download</button>
 
-  <!-- html2canvas untuk screenshot -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script>
+    function generateChat() {
+      let text = document.getElementById("userInput").value;
+      document.getElementById("chatBubble").innerHTML = text + ' <span class="time">07:22</span>';
+      document.getElementById("result").style.display = "block";
+      document.getElementById("downloadBtn").style.display = "inline-block";
+    }
+
+    function downloadImage() {
+      html2canvas(document.querySelector("#result")).then(canvas => {
+        let link = document.createElement("a");
+        link.download = "fakechat.png";
+        link.href = canvas.toDataURL();
+        link.click();
+      });
+    }
+  </script>
+</body>
+</html>  <script>
     function generateChat() {
       let text = document.getElementById("userInput").value;
       document.getElementById("chatBubble").childNodes[0].nodeValue = text + " ";
