--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>iPhone Quoted Generator</title>
+  <title>iPhone Quoted Generator By Jacky</title>
   <style>
     body {
       background: #000;
@@ -114,7 +114,7 @@
 <body>
   <h1>iPhone Quoted Generator</h1>
   <div class="container">
-    <input type="text" id="message" placeholder="Tulis kata-kata kamu... ✨">
+    <input type="text" id="message" placeholder="Tulis kata-kata mu lek... ✨">
     <button onclick="generateImage()">🚀 Kirim</button>
 
     <div class="result" id="result"></div>
@@ -126,7 +126,7 @@
       const resultDiv = document.getElementById("result");
 
       if (!message) {
-        alert("Harap masukkan teks terlebih dahulu!");
+        alert("Masukkan Teks Nya Dulu Oon😡");
         return;
       }
 
